# Bot_Beeper

./: .gitignore  .replit  README.md  pyproject.toml
Beeper/: __init__.py  __main__.py  keep_alive.py
BeeperEnv/: pyvenv.cfg
BeeperEnv/Scripts/: activate  activate.bat
secrets/: token.env
