[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["JJWren <<>>"]
description = ""
name = "botbeeper"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.3"
hikari = "^2.0.0-alpha.107"
hikari-lightbulb = "^2.2.0"
python = ">=3.8.0,<3.11"
[tool.poetry.dev-dependencies]
Flask = "^2.0.3"
hikari = "^2.0.0-alpha.107"
hikari-lightbulb = "^2.2.0"
python = ">=3.8.0,<3.11"